262578989263/Games/templates/httproute-wp-redirect-wordpress1.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wp-redirect-wordpress1
  namespace: gamestest
  labels:
    app.kubernetes.io/name: wp-redirect-wordpress1
    app.kubernetes.io/managed-by: struct8
    app.kubernetes.io/instance: Games
    cloudman.io/user: rmay-struct
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  parentRefs:
    - name: gapi
      namespace: infra
      sectionName: g-api-redirect
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            statusCode: 301
            hostname: wp.k8h.admin.billingpay.com.br
            scheme: https
  hostnames:
    - wp.k8h.admin.billingpay.com.br
